--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "^2.9.2"
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+isort = "^6.0.1"
+black = "^25.1.0"
+
 
 [build-system]
 requires = ["poetry-core"]
