--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tcode-api"
-version = "1.2.0"
+version = "1.3.0"
 description = "TCode API specification implemented in pydantic"
 authors = ["Connor Novak <connor@trilo.bio>"]
 readme = "README.md"
@@ -8,6 +8,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.9.2"
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+isort = "^6.0.1"
+black = "^25.1.0"
+mypy = "^1.15.0"
 
 
 [build-system]
