--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,16 @@
-[tool.poetry]
+[project]
 name = "tcode-api"
 version = "1.4.0"
 description = "TCode API specification implemented in pydantic"
-authors = ["Connor Novak <connor@trilo.bio>"]
+authors = [
+    { name = "Connor Novak", email = "connor@trilo.bio" }
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-pydantic = "^2.9.2"
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-isort = "^6.0.1"
-black = "^25.1.0"
-mypy = "^1.15.0"
-
+requires-python = ">=3.11"
+dependencies = [
+    "pydantic>=2.10.6",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
