--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mypy>=1.15.0",  # Installed to ensure type checking of pydantic
     "pydantic>=2.10.6",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.mypy]
+plugins = ['pydantic.mypy']
