--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,17 @@ build-backend = "hatchling.build"
 
 [tool.mypy]
 plugins = ['pydantic.mypy']
+
+[dependency-groups]
+dev = [
+    "coverage>=7.8.2",
+]
+
+
+[tool.coverage.run]
+branch = true
+command_line = "-m unittest discover -s tests"
+omit = [
+  "tests/*",
+  "__init__.py",
+]
