--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ plugins = ['pydantic.mypy']
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
     "coverage>=7.8.2",
+    "isort>=6.0.1",
+    "mypy>=1.15.0",
 ]
 
 
