--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "mypy>=1.15.0",  # Installed to ensure type checking of pydantic
+    "mypy>=1.15.0", # Installed to ensure type checking of pydantic
+    "plac>=1.4.5",
     "pydantic>=2.10.6",
 ]
 
