--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tcode-api"
-version = "1.16.0"
+version = "1.17.0"
 description = "TCode API specification implemented in pydantic"
 authors = [
     { name = "Connor Novak", email = "connor@trilo.bio" }
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "mypy>=1.15.0",  # Installed to ensure type checking of pydantic
+    "mypy>=1.15.0", # Installed to ensure type checking of pydantic
+    "plac>=1.4.5",
     "pydantic>=2.10.6",
 ]
 
@@ -21,7 +22,10 @@ plugins = ['pydantic.mypy']
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
     "coverage>=7.8.2",
+    "isort>=6.0.1",
+    "mypy>=1.15.0",
 ]
 
 
