--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ plugins = ['pydantic.mypy']
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "build>=1.3.0",
     "coverage>=7.8.2",
     "furo>=2025.7.19",
     "isort>=6.0.1",
