--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ plugins = ['pydantic.mypy']
 
 [dependency-groups]
 dev = [
+    "autodoc-pydantic>=2.2.0",
     "black>=25.1.0",
     "build>=1.3.0",
     "coverage>=7.8.2",
