--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tcode-api"
-version = "1.25.0"
+version = "1.25.1"
 description = "Python implementation of Trilobio's TCode API"
 authors = [
     { name = "Trilobio", email = "hello@trilo.bio" }
@@ -22,7 +22,9 @@ plugins = ['pydantic.mypy']
 
 [dependency-groups]
 dev = [
+    "autodoc-pydantic>=2.2.0",
     "black>=25.1.0",
+    "build>=1.3.0",
     "coverage>=7.8.2",
     "furo>=2025.7.19",
     "isort>=6.0.1",
@@ -30,6 +32,7 @@ dev = [
     "sphinx>=8.2.3",
     "sphinx-autodoc-typehints>=3.2.0",
     "sphinx-copybutton>=0.5.2",
+    "types-requests>=2.32.4.20250913",
 ]
 
 
