--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pint>=0.25",
     "plac>=1.4.5",
     "pydantic>=2.10.6",
+    "requests>=2.32.5",
     "uvicorn>=0.38.0",
 ]
 
