--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tcode-api"
-version = "1.29.0"
+version = "1.29.1.dev1"
 description = "Python implementation of Trilobio's TCode API"
 authors = [
     { name = "Trilobio", email = "hello@trilo.bio" }
@@ -20,6 +20,19 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "labware/*.json",
+    "src/"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/", "labware/"]
+
+[tool.hatch.build.targets.wheel.sources]
+"labware" = "tcode_labware"
+"src/tcode_api" = "tcode_api"
 
 [dependency-groups]
 dev = [
