--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tcode-api"
-version = "1.28.1"
+version = "1.29.3"
 description = "Python implementation of Trilobio's TCode API"
 authors = [
     { name = "Trilobio", email = "hello@trilo.bio" }
@@ -8,15 +8,31 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi>=0.120.3",
     "mypy>=1.15.0", # Installed to ensure type checking of pydantic
     "pint>=0.25",
     "plac>=1.4.5",
     "pydantic>=2.10.6",
+    "requests>=2.32.5",
+    "uvicorn>=0.38.0",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "tcode_labware/*.json",
+    "src/"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/", "tcode_labware/"]
+
+[tool.hatch.build.targets.wheel.sources]
+"tcode_labware" = "tcode_labware"
+"src/tcode_api" = "tcode_api"
 
 [dependency-groups]
 dev = [
