--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tcode-api"
-version = "1.30.0"
+version = "1.30.1"
 description = "Python implementation of Trilobio's TCode API"
 authors = [
     { name = "Trilobio", email = "hello@trilo.bio" }
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.120.3",
-    "mypy>=1.15.0", # Installed to ensure type checking of pydantic
     "pint>=0.25",
     "plac>=1.4.5",
     "pydantic>=2.10.6",
@@ -43,7 +42,8 @@ dev = [
     "furo>=2025.7.19",
     "ipython>=9.6.0",
     "isort>=6.0.1",
-    "mypy>=1.15.0",
+    "mypy>=1.19.0",
+    "ruff>=0.14.9",
     "sphinx>=8.2.3",
     "sphinx-autodoc-typehints>=3.2.0",
     "sphinx-copybutton>=0.5.2",
