--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.120.3",
+    "numpy>=2.4.1",
     "pint>=0.25",
     "plac>=1.4.5",
     "pydantic>=2.10.6",
     "requests>=2.32.5",
+    "scipy>=1.17.0",
     "uvicorn>=0.38.0",
 ]
 
