--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [project]
 name = "tcode-api"
-version = "1.34.0"
+version = "1.35.0"
 description = "Python implementation of Trilobio's TCode API"
-authors = [
-    { name = "Trilobio", email = "hello@trilo.bio" }
-]
+authors = [{ name = "Trilobio", email = "hello@trilo.bio" }]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -23,10 +21,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
-include = [
-  "tcode_labware/*.json",
-    "src/"
-]
+include = ["tcode_labware/*.json", "src/"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/", "tcode_labware/"]
@@ -71,7 +66,4 @@ line-length = 100
 [tool.coverage.run]
 branch = true
 command_line = "-m unittest discover -s tests"
-omit = [
-  "tests/*",
-  "__init__.py",
-]
+omit = ["tests/*", "__init__.py"]
