--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pint>=0.25",
     "plac>=1.4.5",
     "pydantic>=2.10.6",
+    "python-socketio>=5.13.0",
     "requests>=2.32.5",
     "scipy>=1.17.0",
     "uvicorn>=0.38.0",
